@@ -186,6 +186,9 @@ class FacetPairing : public detail::FacetPairingBase<dim> {
 
     // Make sure the parent class can call the private constructor.
     friend class detail::FacetPairingBase<dim>;
+
+    // Facet pairings are largely read-only: allow application of isomorphisms.
+    friend class Isomorphism<dim>;
 };
 
 /**
