@@ -33,12 +33,12 @@
 #include "../pybind11/pybind11.h"
 #include "../pybind11/operators.h"
 #include "triangulation/dim3.h"
+#include "triangulation/facetpairing3.h"
 #include "../helpers.h"
 
 using pybind11::overload_cast;
 using regina::Isomorphism;
 using regina::Perm;
-using regina::Triangulation;
 
 void addIsomorphism3(pybind11::module_& m) {
     auto c = pybind11::class_<Isomorphism<3>>(m, "Isomorphism3")
@@ -68,13 +68,16 @@ void addIsomorphism3(pybind11::module_& m) {
         })
         .def("__getitem__", &Isomorphism<3>::operator[])
         .def("isIdentity", &Isomorphism<3>::isIdentity)
-        .def("__call__", &Isomorphism<3>::operator())
-        .def("apply", // deprecated
-                [](const Isomorphism<3>& iso, const Triangulation<3>& tri) {
-            return iso(tri);
-        })
+        .def("__call__", overload_cast<const regina::Triangulation<3>&>(
+            &Isomorphism<3>::operator(), pybind11::const_))
+        .def("__call__", overload_cast<const regina::FacetSpec<3>&>(
+            &Isomorphism<3>::operator(), pybind11::const_))
+        .def("__call__", overload_cast<const regina::FacetPairing<3>&>(
+            &Isomorphism<3>::operator(), pybind11::const_))
+        .def("apply", overload_cast<const regina::Triangulation<3>&>(
+            &Isomorphism<3>::operator(), pybind11::const_)) // deprecated
         .def("applyInPlace", // deprecated
-                [](const Isomorphism<3>& iso, Triangulation<3>& tri) {
+                [](const Isomorphism<3>& iso, regina::Triangulation<3>& tri) {
             tri = iso(tri);
         })
         .def(pybind11::self * pybind11::self)
