@@ -61,3 +61,69 @@ Triangles:
     1  |           2   1   3   3
 
 
+0:3 1:1 1:2 0:0 | 1:3 0:1 0:2 1:0
+1:3 1:2 0:3 0:2 | 1:1 1:0 0:1 0:0
+Size of the skeleton:
+  Tetrahedra: 2
+  Triangles: 5
+  Edges: 4
+  Vertices: 1
+
+Tetrahedron gluing:
+  Tet  |  glued to:      (012)      (013)      (023)      (123)
+  -----+-------------------------------------------------------
+    0  |              boundary   boundary    1 (013)    1 (120)
+    1  |               0 (312)    0 (023)    1 (312)    1 (230)
+
+Vertices:
+  Tet  |  vertex:    0   1   2   3
+  -----+--------------------------
+    0  |             0   0   0   0
+    1  |             0   0   0   0
+
+Edges:
+  Tet  |  edge:   01  02  03  12  13  23
+  -----+--------------------------------
+    0  |           0   1   2   2   1   3
+    1  |           1   3   2   2   3   2
+
+Triangles:
+  Tet  |  face:  012 013 023 123
+  -----+------------------------
+    0  |           0   1   2   3
+    1  |           3   2   4   4
+
+
+Size of the skeleton:
+  Tetrahedra: 2
+  Triangles: 5
+  Edges: 4
+  Vertices: 1
+
+Tetrahedron gluing:
+  Tet  |  glued to:      (012)      (013)      (023)      (123)
+  -----+-------------------------------------------------------
+    0  |               1 (320)    0 (302)    0 (130)    1 (310)
+    1  |              boundary    0 (321)    0 (210)   boundary
+
+Vertices:
+  Tet  |  vertex:    0   1   2   3
+  -----+--------------------------
+    0  |             0   0   0   0
+    1  |             0   0   0   0
+
+Edges:
+  Tet  |  edge:   01  02  03  12  13  23
+  -----+--------------------------------
+    0  |           0   1   0   2   1   0
+    1  |           0   2   1   3   2   0
+
+Triangles:
+  Tet  |  face:  012 013 023 123
+  -----+------------------------
+    0  |           0   1   1   2
+    1  |           3   2   0   4
+
+
+1:3 1:2 bdry bdry | 1:1 1:0 0:1 0:0
+1:2 0:2 0:1 1:1 | bdry 0:3 0:0 bdry
